[project]
name = "pixieverse.render_html"
dynamic = ["version"]
authors = [
  { name="Pradeep Roark", email="pradeep.roark@gmail.com" },
]
description = "A package to parse pixie component files which allow you to author components in python"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",

  "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["templating","web","parser","jsx","html"]
dependencies = [
  
]

[project.optional-dependencies]
dev = [
  "build",
  "pre-commit",
  "black",
  "flake8",
  "mypy"
]
publish = ["twine"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/pixieverse/render_html/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39','py310','py311','py312']

[tool.mypy]
strict = false
disallow_untyped_decorators = false
check_untyped_defs = true
