[project]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",

  "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["templating","web","parser","jsx","html"]
dependencies = [
  
]

[project.optional-dependencies]
dev = [
  "build",
  "pre-commit",
  "poetry",
  "black",
  "flake8",
  "mypy"
]
publish = ["twine"]


[tool.black]
line-length = 88
target-version = ['py39','py310','py311','py312']


[tool.mypy]
strict = false
disallow_untyped_decorators = false
check_untyped_defs = true

[tool.poetry]
name = "pixieverse-render-html"
version = "0.1.0"
description = "A package to render pixie (.pix) files to HTML"
authors = ["Pradeep Roark <pradeep.roark@gmail.com>"]
readme = "README.md"
packages = [{include = "pixieverse"}]

[tool.poetry.dependencies]
python = "^3.9"
pixie = {path = "../pixie"}

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
pre-commit = "^3.7.0"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
